# tcBLAS

./: CMakeLists.txt  README.md
include/: tcblas.hpp  tcblas_cuda.hpp  tcblas_ia.hpp  tcblas_util.hpp
src/avx2/: tcb_compact_gemm_nn.cpp  tcb_compact_gemm_nn_core.cxx  tcb_compact_getrf.cpp  tcb_compact_getrf_core.cxx  tcb_compact_trsm_lln.cpp  tcb_compact_trsm_lln_run_core.cxx  tcb_compact_trsm_run.cpp
src/avx512/: tcb_compact_gemm_nn.cpp  tcb_compact_gemm_nn_core.cxx  tcb_compact_getrf.cpp  tcb_compact_getrf_core.cxx  tcb_compact_trsm_lln.cpp  tcb_compact_trsm_lln_run_core.cxx  tcb_compact_trsm_run.cpp
src/common/: tcblas_common.hpp
src/cuda/: tcb_compact_gemm_nn.cu
