CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7 FATAL_ERROR)

PROJECT(libtcb)

SET(CMAKE_MODULE_PATH ${CMAKE_HOME_DIRECTORY}/cmake)

# TCB Includes
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES("${CMAKE_HOME_DIRECTORY}/include"
                    "${CMAKE_HOME_DIRECTORY}/src/common")

# Check for CUDA #
FIND_PACKAGE(CUDA REQUIRED)

# Flags
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -std=c++11 -fno-operator-names")

# Headers and source
file ( GLOB_RECURSE HEADERS
       "${CMAKE_HOME_DIRECTORY}/src/common/*.hpp" 
       "${CMAKE_HOME_DIRECTORY}/include/*.hpp")
file( GLOB_RECURSE SOURCES
	   "${CMAKE_HOME_DIRECTORY}/src/*.cu" 
           "${CMAKE_HOME_DIRECTORY}/src/*.cpp" )
SET(LIBRARY_SRCS ${HEADERS} ${XBYAK_INCLUDE} ${SOURCES})

# Static build and link
CUDA_ADD_LIBRARY(tcb STATIC ${LIBRARY_SRCS})

TARGET_LINK_LIBRARIES( tcb )

# Install
INSTALL(TARGETS tcb DESTINATION lib)
INSTALL(DIRECTORY "./include" DESTINATION ${CMAKE_INSTALL_PREFIX} )
